# xyi-agv-robot

./: README.md
my_aruco/: CMakeLists.txt  my_aruco.launch  package.xml
my_aruco/include/: match.h  my_aruco.h
my_aruco/src/: camera_position.cpp  match.cpp  my_aruco.cpp
rplidar_ros-master/launch/: rplidar.launch
turtlebot_teleop/scripts/: turtlebot_teleop_key  turtlebot_teleop_key~
xyi2_bot/: CMakeLists.txt  CMakeLists.txt~  package.xml
xyi2_bot/config/: hokuyo_5m_laser_config.yaml  simu_laser_config.yaml~  xiaoyi_laser_config.yaml~
xyi2_bot/launch/: aria_bot.launch  aria_bot.launch~  bs_bot.launch  bs_bot.launch~  simu_bot.launch  simu_bot.launch~
xyi2_brain/: CMakeLists.txt  package.xml
xyi2_brain-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  xyi2_brain.cbp
xyi2_brain-build/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
xyi2_brain-build/catkin_generated/installspace/: xyi2_brain.pc  xyi2_brainConfig.cmake
xyi2_brain-build/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
xyi2_brain-build/devel/lib/pkgconfig/: xyi2_brain.pc
xyi2_brain-build/devel/share/xyi2_brain/cmake/: xyi2_brainConfig.cmake
xyi2_brain-build/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
xyi2_brain/src/: main.cpp  main.h  pkg_include.h
xyi2_brain/src/class_tool/: hfunc.cpp  hfunc.h  param_robot.cpp  param_robot.h  slamdata.cpp  slamdata.h  tfm.cpp  tfm.h  tfm_slam.cpp
xyi2_brain/src/com_bus/scom/: scom_bsp.cpp  scom_bsp.h  scom_config.h  scom_function.cpp  scom_function.h  scom_manage.cpp  scom_manage.h
xyi2_brain/src/graph_base/: grapgh_base_config.h  graph_func.cpp  slam_procedure.cpp  struct_graph.cpp  struct_graph.h  unit_edge.cpp  unit_edge.h  unit_kdtree.cpp  unit_kdtree.h  unit_node.cpp  unit_node.h  unit_table.cpp  unit_table.h
xyi2_brain/src/graph_base/graph_io/: graph_io.cpp  graph_io.h
xyi2_brain/src/graph_base/optimizer/: ceres_opt1.cpp
xyi2_brain/src/map/: mfunc_mapexisting.cpp  mfunc_slam_tmpmapping.cpp  struct_map.cpp  struct_map.h  struct_map_config.h
xyi2_brain/src/map/history files/: basic_kdtree.cpp  basic_kdtree.h  basic_quadtree.cpp  basic_quadtree.h  mfunc_kdtree.cpp
xyi2_brain/src/matchings/: al_match.cpp  al_match.h  al_match_aidclass.h  func_lsr_mapping.cpp  func_lsr_mapping.h  search_window_portfunc.cpp  search_window_strategy.cpp  search_window_strategy.h  struct_localmapping_chart.cpp  struct_localmapping_chart.h  struct_lsr_filter.cpp  struct_lsr_filter.h
xyi2_brain/src/navigation/: navi_config.h  navi_func.cpp  navi_func.h  navi_manage.cpp  navi_manage.h
xyi2_brain/src/navigation/gpath_plan/: asearch.cpp  asearch.h
xyi2_brain/src/navigation/lmap/: localmap.cpp  localmap.h
xyi2_brain/src/navigation/lpath_plan/: dwindow.cpp  dwindow.h  dwindow_chart.cpp
xyi2_brain/src/navigation/rcontrol/: r_controller.cpp  r_controller.h
xyi2_brain/src/sensors/: model_laser.cpp  model_laser.h
xyi2_brain/src/thread_manage/: thread_manage.cpp  thread_manage.h
xyi2_bringup/: CMakeLists.txt  package.xml
xyi2_bringup/bagfiles/: command  slampath_line&circle.bag
xyi2_bringup/graphfiles/: readme.txt  readme.txt~  test0911.data  test0913.data
xyi2_bringup/graphfiles/chess/: slam_graph_m4.data  slam_graph_m5.data  slam_graph_m6.data  slam_graph_m7.data  slam_graph_m8.data  slam_graph_m9.data  slam_graph_o4.data  slam_graph_o5.data  slam_graph_o6.data  slam_graph_o7.data  slam_graph_o8.data  slam_graph_o9.data  slam_graph_vo1.data  slam_graph_vo2.data
xyi2_bringup/launch/: robot_build_map.launch~  robot_buildmap.launch  robot_keyboard.launch  robot_keyboard.launch~  robot_savemap.launch  robot_savemap.launch~  robot_yb_aria_hectormapping.launch  robot_yb_aria_hectormapping.launch~  robot_yb_aria_mapexisting.launch  robot_yb_aria_mapexisting.launch~  robot_yb_aria_slam.launch  robot_yb_aria_slam.launch~  robot_yb_bs_hectormapping.launch  robot_yb_bs_hectormapping.launch~  robot_yb_bs_mapexisting.launch~  robot_yb_bs_slam.launch  robot_yb_bs_slam.launch~  robot_yb_rosbag.launch  robot_yb_rosbag.launch~  robot_yb_scom.launch  robot_yb_scom.launch~  robot_yb_simu_hectormapping.launch  robot_yb_simu_hectormapping.launch~  robot_yb_simu_mapexisting.launch  robot_yb_simu_mapexisting.launch~  robot_yb_simu_rosbag.launch~  robot_yb_simu_slam.launch  robot_yb_simu_slam.launch~
xyi2_bringup/rviz_config/: xyi2_brain.rviz
xyi2_buildmap/: CMakeLists.txt  package.xml
xyi2_buildmap/src/: buildmap.cpp  buildmap.h  func_buildmap.cpp  func_buildmap.h
xyi2_buildmap/src/graph_io/: graph_io.h
xyi2_buildmap/src/optimizer/: graph_opt1.cpp  graph_opt1.h
xyi2_envi/: CMakeLists.txt  package.xml
xyi2_envi/launch/: envi_mapping_lab.launch  envi_mapping_test.launch~
xyi2_envi/map/: lab_map2.yaml  simu_map.yaml~  simu_map_old.yaml
xyi2_envi/map/map_remained/: lab_map.yaml  lab_map2.pgm  lab_map2.yaml  lab_map3.pgm  lab_map3.yaml  simu_map (copy).pgm  simu_map (copy).yaml  simu_map.pgm  simu_map.yaml
xyi2_pshow/: CMakeLists.txt~  package.xml
xyi2_pshow/scripts/: pshow_main.py
xyi2_test/: CMakeLists.txt  package.xml
xyi2_test/src/: main.cpp
